--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Page</title>
+    <title>Jacqueline Ross</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css"href="./styles/style.css" >
 
 </head>
 
 <body>
+
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="#">Jacqueline Ross</a>
@@ -34,10 +35,21 @@
     
     <!--About Me-->
     <div class="container-fluid">
-      <h1>About Me</h1>
-    <!--img here-->
-      <p>Pickled plaid lomo, XOXO subway tile farm-to-table irony PBR&B beard man braid kale chips offal street art truffaut fanny pack. Pug PBR&B cred edison bulb, flannel tilde asymmetrical knausgaard ramps schlitz whatever. Narwhal beard enamel pin skateboard leggings food truck pug jianbing meditation roof party activated charcoal flannel. Af hammock next level blog hella man bun meditation vegan cred sustainable cold-pressed shabby chic gastropub aesthetic forage. Banjo deep v photo booth pork belly, leggings neutra tattooed bitters hot chicken pickled austin hashtag kitsch actually.</p>
-      <p>Hella sustainable wolf +1 chia. Cray vaporware shabby chic mlkshk. Food truck direct trade green juice, offal palo santo skateboard cloud bread taiyaki hashtag chia. Craft beer intelligentsia before they sold out tbh. Actually tbh raclette, tattooed YOLO man bun cold-pressed jianbing fanny pack. Ennui fashion axe literally knausgaard man bun selfies occupy church-key VHS ramps pabst meh art party sartorial.</p>
+      <div class="row">
+        <div class="col-12">
+          <h1>About Me</h1>
+        </div>
+      </div>
+    
+      <div class="row">
+        <div class="col-4">
+            <!--img here-->
+        </div>
+        <div class="col-4">
+          <p>Pickled plaid lomo, XOXO subway tile farm-to-table irony PBR&B beard man braid kale chips offal street art truffaut fanny pack. Pug PBR&B cred edison bulb, flannel tilde asymmetrical knausgaard ramps schlitz whatever. Narwhal beard enamel pin skateboard leggings food truck pug jianbing meditation roof party activated charcoal flannel. Af hammock next level blog hella man bun meditation vegan cred sustainable cold-pressed shabby chic gastropub aesthetic forage. Banjo deep v photo booth pork belly, leggings neutra tattooed bitters hot chicken pickled austin hashtag kitsch actually.</p>
+          <p>Hella sustainable wolf +1 chia. Cray vaporware shabby chic mlkshk. Food truck direct trade green juice, offal palo santo skateboard cloud bread taiyaki hashtag chia. Craft beer intelligentsia before they sold out tbh. Actually tbh raclette, tattooed YOLO man bun cold-pressed jianbing fanny pack. Ennui fashion axe literally knausgaard man bun selfies occupy church-key VHS ramps pabst meh art party sartorial.</p>
+        </div>
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
