--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </nav>
     
     <!--About Me-->
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <div class="col-12">
           <h1>About Me</h1>
