--- a/contact.html
+++ b/contact.html
@@ -12,47 +12,48 @@
 </head>
 
 <body>
-   <!--Navbar-->
-   <nav class="navbar navbar-expand-lg">
+    <!--Navbar-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Jacqueline Ross</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">About</a>
+        </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="contact.html">Contact Me <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Me</a>
-        </li>
+      </ul>
     </div>
   </nav>
+
 
   <!--Header-->
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <h1>Contact Me</h1>
+        <h2>Contact Me</h2>
       </div>
     </div>
     
     <div class="row">
-      <div class="col-3">
-
+      <div class="col-2">
       </div>
-      <div class="col-9">
+
+      <div class="col-8">
         <!--Contact Me form-->
         <div class="card">
           <div class="card-body">
             <form>
               <div class="form-group">
                 <label for="exampleFormControlInput1"><i class="far fa-user"></i> Your Name</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your Name Here">
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Your Name Here">
               </div>
               <div class="form-group">
                 <label for="exampleFormControlInput1"><i class="far fa-envelope"></i> Email Address</label>
@@ -66,14 +67,17 @@
             </form>
           </div>
         </div> 
-
       </div>
+
+      <div class="col-2">
+      </div>
+
     </div>
 
     <!--Footer-->
     <div class="row">
       <div class="col-12">
-        <h4>I can't wait to hear from you <i class="far fa-heart"></i></h4x>
+        <h5>I can't wait to hear from you <i class="far fa-kiss-wink-heart"></i></h5>
       </div>
     </div>
 
