--- a/contact.html
+++ b/contact.html
@@ -12,13 +12,15 @@
 </head>
 
 <body>
-    <!--Navbar-->
+
+   <!--Navbar-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Jacqueline Ross</a>
+    <span class="navbar-brand mb-0 h1">Jacqueline Ross</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <!--Changed div class to nav to specify navigation links-->
+    <nav class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="index.html">About</a>
@@ -30,24 +32,25 @@
           <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
       </ul>
-    </div>
+    </nav>
   </nav>
 
 
   <!--Header-->
-  <div class="container">
-    <div class="row">
+  <!--Changed my container div to main as it is the main part of the webpage. Each row class was then changed from a div to a section within the main container-->
+  <main class="container">
+    <section class="row">
       <div class="col-12">
         <h2>Contact Me</h2>
       </div>
-    </div>
+    </section>
     
-    <div class="row">
+    <section class="row">
       <div class="col-2">
       </div>
 
       <div class="col-8">
-        <!--Contact Me form-->
+        <!--Contact Me Form-->
         <div class="card">
           <div class="card-body">
             <form>
@@ -72,20 +75,28 @@
       <div class="col-2">
       </div>
 
-    </div>
+    </section>
 
-    <!--Footer-->
-    <div class="row">
+    <!--Message Under Contact-->
+    <section class="row">
       <div class="col-12">
         <h5>I can't wait to hear from you <i class="far fa-kiss-wink-heart"></i></h5>
       </div>
-    </div>
+    </section>
 
-  </div>
-   
-  
- 
- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  </main>
+  <!--FooterContact Info Across site-->
+  <nav class="navbar fixed bottom">
+    <div class="row">
+      <div class="col-12">
+        <a class="navbar-brand" href="www.linkedin.com/in/jacquelinekross"><i class="fab fa-linkedin-in"></i></a>
+        <a class="navbar-brand" href="https://github.com/ross1jk"><i class="fab fa-github"></i></a>
+        <a class="navbar-brand" href="mailto:jacqueline.ross09@gmail.com"><i class="fas fa-envelope-open-text"></i></a>
+      </div>
+    </div>
+  </nav>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
