--- a/portfolio.html
+++ b/portfolio.html
@@ -12,12 +12,13 @@
 
 <body>
  <!--Navbar-->
- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Jacqueline Ross</a>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <span class="navbar-brand mb-0 h1">Jacqueline Ross</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <!--Changed div class to nav to specify navigation links-->
+    <nav class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="index.html">About</a>
@@ -29,7 +30,7 @@
          <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
         </li>
       </ul>
-    </div>
+    </nav>
  </nav>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
