--- a/contact.html
+++ b/contact.html
@@ -86,15 +86,11 @@
 
   </main>
   <!--FooterContact Info Across site-->
-  <nav class="navbar fixed bottom">
-    <div class="row">
-      <div class="col-12">
+  <footer class="navbar fixed-bottom justify-content-center navbar-light">
         <a class="navbar-brand" href="www.linkedin.com/in/jacquelinekross"><i class="fab fa-linkedin-in"></i></a>
         <a class="navbar-brand" href="https://github.com/ross1jk"><i class="fab fa-github"></i></a>
         <a class="navbar-brand" href="mailto:jacqueline.ross09@gmail.com"><i class="fas fa-envelope-open-text"></i></a>
-      </div>
-    </div>
-  </nav>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
