--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css"href="./styles/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
 
 <body>
@@ -32,6 +33,13 @@
       </ul>
     </nav>
  </nav>
+
+  <!--FooterContact Info Across site-->
+  <footer class="navbar fixed-bottom justify-content-center navbar-light">
+    <a class="navbar-brand" href="www.linkedin.com/in/jacquelinekross"><i class="fab fa-linkedin-in"></i></a>
+    <a class="navbar-brand" href="https://github.com/ross1jk"><i class="fab fa-github"></i></a>
+    <a class="navbar-brand" href="mailto:jacqueline.ross09@gmail.com"><i class="fas fa-envelope-open-text"></i></a>
+</footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
