created container, and first portoflio image item on portfolio.html.

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,6 +34,19 @@
     </nav>
  </nav>
 
+<main class="container">
+
+  <figure class="card bg-dark text-white">
+    <img src="./images/HoriseonCodeRefactor.png" class="card-img" alt="Horiseon Marketing Agency Webpage Preview">
+  <section class="card-img-overlay">
+    <h5 class="card-title bg-secondary">Horiseon Marketing Agency Code Refactor</h5>
+    <p class="card-text bg-secondary">Code refactoring to meet accessiblity standards for Horsien Marketing Agency.</p>
+    <a href="https://github.com/ross1jk/Horiseon-Marketing-Agency-Code-Refactor" class="btn btn-link bg-secondary text-white">Github Repository</a>
+  </section>
+</figure>
+
+</main>
+
   <!--FooterContact Info Across site-->
   <footer class="navbar fixed-bottom justify-content-center navbar-light">
     <a class="navbar-brand" href="www.linkedin.com/in/jacquelinekross"><i class="fab fa-linkedin-in"></i></a>
