Updated the header on each card on each html page so that it had the same CSS and bootstrap styling.

--- a/index.html
+++ b/index.html
@@ -41,14 +41,16 @@
       <div class="col-9">
           <!--changed card class div to an article, this card contains information about me and this cand and does stand alone from other content-->
          <article class="card">
-           <article class="card-body">
-             <!--Header div class row to header for about me, col is a section-->
-             <header class="row">
-               <section class="col-12">
-                 <h1>About Me</h1>
-               </section>
-             </header> 
+             <!--Header-->
+             <header class="card-header bg-transparent">
+              <header class="col-12">
+                <header class="row">
+                  <h1>About Me</h1>
+                </header>
+              </header>
+            </header>
              <!--actual writing about me, and section breaks up away from other area? may want to change this tag-->
+             <article class="card-body">
              <article class="row">
                <section class="col-12">
                <!--About Me Picture-->
