--- a/contact.html
+++ b/contact.html
@@ -40,19 +40,23 @@
   <!--Changed my container div to main as it is the main part of the webpage. Each row class was then changed from a div to a section within the main container-->
   <main class="container">
     <section class="row">
-      <div class="col-12">
-        <h2>Contact Me</h2>
-      </div>
-    </section>
-    
-    <section class="row">
       <div class="col-2">
       </div>
 
       <div class="col-8">
         <!--Contact Me Form-->
         <div class="card">
-          <div class="card-body">
+          <div class="container">
+            <!--Header-->
+            <header class="card-header bg-transparent">
+              <header class="col-12">
+                <header class="row">
+                  <h1>Contact Me</h1>
+                </header>
+              </header>
+            </header>
+            <!--Main Form-->
+            <div class="card-body">
             <form>
               <div class="form-group">
                 <label for="exampleFormControlInput1"><i class="far fa-user"></i> Your Name</label>
@@ -70,6 +74,7 @@
             </form>
           </div>
         </div> 
+        </div>
       </div>
 
       <div class="col-2">
@@ -80,7 +85,7 @@
     <!--Message Under Contact-->
     <section class="row">
       <div class="col-12">
-        <h5>I can't wait to hear from you <i class="far fa-kiss-wink-heart"></i></h5>
+        <p>I can't wait to hear from you <i class="far fa-kiss-wink-heart"></i></p>
       </div>
     </section>
 
