updated semantics on index.html. class=row are sections, and class=col will remain divs.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
  </nav>
     
   <!--Changed div container to main, this is the main part of the webpage-->
-  <main class="container"> 
+ <main class="container"> 
    <!--changed div class row to section, the about me card is one section within the main page-->
     <section class="row">
       <div class="col-9">
@@ -43,16 +43,16 @@
          <article class="card">
              <!--Header-->
              <header class="card-header bg-transparent">
-              <header class="col-12">
+              <div class="col-12">
                 <header class="row">
                   <h1>About Me</h1>
                 </header>
-              </header>
+              </div>
             </header>
              <!--actual writing about me, and section breaks up away from other area? may want to change this tag-->
              <article class="card-body">
-             <article class="row">
-               <section class="col-12">
+             <section class="row">
+              <div class="col-12">
                <!--About Me Picture-->
                  <img class="wrapper">
                    <img src="./Images/AboutMe.JPG" class="float-left mr-3 about-img" alt="Jacqueline Ross">
@@ -60,11 +60,11 @@
                 <!--Information-->
                  <p>Pickled plaid lomo, XOXO subway tile farm-to-table irony PBR&B beard man braid kale chips offal street art truffaut fanny pack. Pug PBR&B cred edison bulb, flannel tilde asymmetrical knausgaard ramps schlitz whatever. Narwhal beard enamel pin skateboard leggings food truck pug jianbing meditation roof party activated charcoal flannel. Af hammock next level blog hella man bun meditation vegan cred sustainable cold-pressed shabby chic gastropub aesthetic forage. Banjo deep v photo booth pork belly, leggings neutra tattooed bitters hot chicken pickled austin hashtag kitsch actually.</p>
                  <p>Hella sustainable wolf +1 chia. Cray vaporware shabby chic mlkshk. Food truck direct trade green juice, offal palo santo skateboard cloud bread taiyaki hashtag chia. Craft beer intelligentsia before they sold out tbh. Actually tbh raclette, tattooed YOLO man bun cold-pressed jianbing fanny pack. Ennui fashion axe literally knausgaard man bun selfies occupy church-key VHS ramps pabst meh art party sartorial.</p>
-               </section>
-             </article>
+               </div>
+              </section>
            </article>
          </article>
-       </div>
+        </div>
     </section>
  </main>
 
