added personalized about me information

--- a/index.html
+++ b/index.html
@@ -60,12 +60,15 @@
                 <!--About Me Picture-->
                  <img class="wrapper">
                    <img src="./Images/AboutMe.JPG" class="float-left mr-3 about-img" alt="Jacqueline Ross">
-                 </img>  
-                
+                 </img> 
                  <!--Information-->
-                 <p>Pickled plaid lomo, XOXO subway tile farm-to-table irony PBR&B beard man braid kale chips offal street art truffaut fanny pack. Pug PBR&B cred edison bulb, flannel tilde asymmetrical knausgaard ramps schlitz whatever. Narwhal beard enamel pin skateboard leggings food truck pug jianbing meditation roof party activated charcoal flannel. Af hammock next level blog hella man bun meditation vegan cred sustainable cold-pressed shabby chic gastropub aesthetic forage. Banjo deep v photo booth pork belly, leggings neutra tattooed bitters hot chicken pickled austin hashtag kitsch actually.</p>
-                 <p>Hella sustainable wolf +1 chia. Cray vaporware shabby chic mlkshk. Food truck direct trade green juice, offal palo santo skateboard cloud bread taiyaki hashtag chia. Craft beer intelligentsia before they sold out tbh. Actually tbh raclette, tattooed YOLO man bun cold-pressed jianbing fanny pack. Ennui fashion axe literally knausgaard man bun selfies occupy church-key VHS ramps pabst meh art party sartorial.</p>
-               </div>
+                   <p>Hey! Thanks for checking out my portfolio page. You have probably gathered that my name is Jacqueline Ross and I am looking for opportunities in web development. I currently live in Royal Oak, Michigan but am open to relocating and have done so in the past. </p>
+                   <p>I started off my career in education. I attained a BS in Education with a major in Language Arts and a minor in Mathematics from Central Michigan University. I continued to study at Central Michigan University at the graduate level in Curriculum and Instruction. I am now taking a Web Development Bootcamp through Michigan State University.</p>
+                   <p>So what led me here? I worked at an Arts Integration school in Las Vegas, NV where I trained with Kennedy Center Artist on the importance of Art in every day life. I was instantly drawn to visual representations. I started finding that the aspects I was enjoying the most of teaching was the designing of my webpage, powerpoint slides, homework pages, etc. So, I researched and job shadowed and took a leap to change my career.</p>
+                   <p>I currently work as the Change Coordinator for Mainframe Services at Ford Motor Company. I leads all aspects of change management for the department and deliver essential communications both internally and externally. This communication involves the design of our project pages and the communication that goes on those. These pages get distributed globally and their functionality is essential.</p>
+                   <p>When I’m not working or honing my web development skills, I am walking my dog Zoey, reading, cycling (stationary), or doing yoga. I love to travel and see historic landmarks and ancient architecture. By far my favourite destination has been Greece.</p>
+                   <p>I hope to hear from you soon!</p>                
+                </div>
              </section>
             </main>
 
