Adjusted images on portfolio page so that they were more responsive, they had a button overlay so the format was simpler and easier to see. Updated CSS to match

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               
                 <!--About Me Picture-->
                  <img class="wrapper">
-                   <img src="./Images/AboutMe.JPG" class="float-left mr-3 about-img" alt="Jacqueline Ross">
+                   <img src="./Images/AboutMe.JPG" class="float-left mr-3 about-img" alt="Jacqueline Ross" width="30%">
                  </img> 
                  <!--Information-->
                    <p>Hey! Thanks for checking out my portfolio page. You have probably gathered that my name is Jacqueline Ross and I am looking for opportunities in web development. I currently live in Royal Oak, Michigan but am open to relocating and have done so in the past. </p>
