Updated elements in each html document after running through a validator.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jacqueline Ross</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css"href="./styles/style.css">
+    <link rel="stylesheet" type="text/css" href="./styles/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
 
@@ -47,7 +47,7 @@
              <header class="card-header bg-transparent">
               <section class="row">
                 <div class="col-12">
-                  <h1>About Me</h1>
+                  <h2>About Me</h2>
                 </div>
               </section>
             </header>
@@ -57,9 +57,9 @@
               <section class="row">
                 <div class="col-12">
                   <!--About Me Picture-->
-                  <img class="wrapper">
+                  <figure class="wrapper">
                     <img src="./Images/AboutMe.JPG" class="float-left mr-3 about-img" alt="Jacqueline Ross" width="30%">
-                  </img> 
+                  </figure> 
                  <!--Information-->
                   <p>Hey! Thanks for checking out my portfolio page. You have probably gathered that my name is Jacqueline Ross and I am looking for opportunities in web development. I currently live in Royal Oak, Michigan but am open to relocating and have done so in the past. </p>
                   <p>I started off my career in education. I attained a BS in Education with a major in Language Arts and a minor in Mathematics from Central Michigan University. I continued to study at Central Michigan University at the graduate level in Curriculum and Instruction. I am now taking a Web Development Bootcamp through Michigan State University.</p>
