--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
                     <img class="img-responsive" src="./images/PasswordGeneratorComingSoon.jpg" alt="Coming Soon">
                     <figure class="img-overlay">
                       <button type="button" class="btn btn-info btn-md" disabled>Password Generator Coming Soon</button>
-                    </figurec>
+                    </figure>
                   </figure>
                 </div>
 
