--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="col-12">
                   <!--About Me Picture-->
                   <figure class="wrapper">
-                    <img src="./Images/AboutMe.JPG" class="float-left mr-3 about-img" alt="Jacqueline Ross" width="30%">
+                    <img src="./Images/AboutMe.JPG" class="float-left" alt="Jacqueline Ross">
                   </figure> 
                  <!--Information-->
                   <p>Hey! Thanks for checking out my portfolio page. You have probably gathered that my name is Jacqueline Ross and I am looking for opportunities in web development. I currently live in Royal Oak, Michigan but am open to relocating and have done so in the past. </p>
@@ -76,13 +76,6 @@
       </div>
     </section>
  </main>
-
-  <!--FooterContact Info Across site-->
-<footer class="navbar fixed-bottom justify-content-center navbar-light">
-    <a class="navbar-brand" href="www.linkedin.com/in/jacquelinekross"><i class="fab fa-linkedin-in"></i></a>
-    <a class="navbar-brand" href="https://github.com/ross1jk"><i class="fab fa-github"></i></a>
-    <a class="navbar-brand" href="mailto:jacqueline.ross09@gmail.com"><i class="fas fa-envelope-open-text"></i></a>
-</footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
