--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <!--changed card class div to an article, this card contains information about me and this cand and does stand alone from other content-->
          
         <article class="card">
-          <section class="row">
+          <section class="container">
             <!--Header-->
              <header class="card-header bg-transparent">
               <section class="row">
