updated titles of each webpage so they were the same.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jacqueline Ross</title>
+    <title>Jacqueline Ross: Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./styles/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
@@ -65,7 +65,7 @@
                   <p>I started off my career in education. I attained a BS in Education with a major in Language Arts and a minor in Mathematics from Central Michigan University. I continued to study at Central Michigan University at the graduate level in Curriculum and Instruction. I am now taking a Web Development Bootcamp through Michigan State University.</p>
                   <p>So what led me here? I worked at an Arts Integration school in Las Vegas, NV where I trained with Kennedy Center Artist on the importance of Art in every day life. I was instantly drawn to visual representations. I started finding that the aspects I was enjoying the most of teaching was the designing of my webpage, powerpoint slides, homework pages, etc. So, I researched and job shadowed and took a leap to change my career.</p>
                   <p>I currently work as the Change Coordinator for Mainframe Services at Ford Motor Company. I leads all aspects of change management for the department and deliver essential communications both internally and externally. This communication involves the design of our project pages and the communication that goes on those. These pages get distributed globally and their functionality is essential.</p>
-                  <p>When I’m not working or honing my web development skills, I am walking my dog Zoey, reading, cycling (stationary), or doing yoga. I love to travel and see historic landmarks and ancient architecture. By far my favourite destination has been Greece.</p>
+                  <p>When I’m not working or honing my web development skills, I am walking my dog Zoey, reading, cycling (stationary), or doing yoga. I love to travel and see historic landmarks and ancient architecture. By far my favorite destination has been Greece.</p>
                   <p>I hope to hear from you soon!</p>                
                </div>
              </section>
