added to portofolio, links for all projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,8 @@
                 <figure class="img-wrapper">
                   <img class="img-responsive" src="./Images/HoriseonCodeRefactor.jpg" alt="Horiseon Marketing Agency Webpage Preview">
                   <figure class="img-overlay">
-                    <a href="https://github.com/ross1jk/Horiseon-Marketing-Agency-Code-Refactor" class="btn btn-info btn-md active" role="button" aria-pressed="true">Horiseon Code Refactor</a>
+                    <a href="https://ross1jk.github.io/Horiseon-Marketing-Agency-Code-Refactor/" class="btn btn-info btn-md active" role="button" aria-pressed="true">Horiseon Code Refactor</a> 
+                    <a href="https://github.com/ross1jk/Horiseon-Marketing-Agency-Code-Refactor" class="btn btn-info btn-md active" role="button" aria-pressed="true">Repository</a>
                   </figure>
                 </figure>
               </div>
@@ -66,7 +67,8 @@
                   <figure class="img-wrapper">
                     <img class="img-responsive" src="./Images/PasswordGeneratorComingSoon.jpg" alt="Coming Soon">
                     <figure class="img-overlay">
-                      <button type="button" class="btn btn-info btn-md" disabled>Password Generator Coming Soon</button>
+                      <a href="https://ross1jk.github.io/Secure-Password-Generator/" class="btn btn-info btn-md active" role="button" aria-pressed="true">Secure Password Generator</a> 
+                      <a href="https://github.com/ross1jk/Secure-Password-Generator" class="btn btn-info btn-md active" role="button" aria-pressed="true">Repository</a>
                     </figure>
                   </figure>
                 </div>
@@ -75,7 +77,8 @@
                   <figure class="img-wrapper">
                     <img class="img-responsive" src="./Images/DayPlannerComingsoon.jpg" alt="Coming Soon">
                     <figure class="img-overlay">
-                      <button type="button" class="btn btn-info btn-md" disabled>Day Planner Coming Soon</button>
+                      <a href="https://ross1jk.github.io/JavaScript-Fundamentals-Quiz/" class="btn btn-info btn-md active" role="button" aria-pressed="true">JavaScript Fundamentals Quiz</a> 
+                      <a href="https://github.com/ross1jk/JavaScript-Fundamentals-Quiz" class="btn btn-info btn-md active" role="button" aria-pressed="true">Repository</a>
                     </figure>
                   </figure>
                 </div>
@@ -84,7 +87,8 @@
                   <figure class="img-wrapper">
                     <img class="img-responsive" src="./Images/WeatherDashboardComingSoon.jpg" alt="Coming Soon">
                     <figure class="img-overlay">
-                      <button type="button" class="btn btn-info btn-md" disabled>Weather Dashboard Coming Soon</button>
+                      <a href="https://ross1jk.github.io/work-day-scheduler/" class="btn btn-info btn-md active" role="button" aria-pressed="true">Work Day Scheduler</a> 
+                      <a href="https://github.com/ross1jk/work-day-scheduler" class="btn btn-info btn-md active" role="button" aria-pressed="true">Repository</a>
                     </figure>
                   </figure>
                 </div>
@@ -93,7 +97,18 @@
                   <figure class="img-wrapper">
                     <img class="img-responsive" src="./Images/Project1ComingSoon.JPG" alt="Coming Soon">
                     <figure class="img-overlay">
-                      <button type="button" class="btn btn-info btn-md" disabled>Project 1 Coming Soon</button>
+                      <a href="https://ross1jk.github.io/weather-dashboard/" class="btn btn-info btn-md active" role="button" aria-pressed="true">Weather Dashboard</a> 
+                      <a href="https://github.com/ross1jk/weather-dashboard" class="btn btn-info btn-md active" role="button" aria-pressed="true">Repository</a>
+                    </figure>
+                  </figure>
+                </div>
+
+                <div class="col-md-6 col-sm-12">
+                  <figure class="img-wrapper">
+                    <img class="img-responsive" src="./Images/Project1ComingSoon.JPG" alt="Coming Soon">
+                    <figure class="img-overlay">
+                      <a href="https://romerodi.github.io/cycle-ology/search-element" class="btn btn-info btn-md active" role="button" aria-pressed="true">Cycle-ology</a> 
+                      <a href="https://github.com/romerodi/cycle-ology" class="btn btn-info btn-md active" role="button" aria-pressed="true">Repository</a>
                     </figure>
                   </figure>
                 </div>
