updated card styling

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
      <!-- <div class="col-9"> -->
           <!--changed card class div to an article, this card contains information about me and this cand and does stand alone from other content-->
          
-        <article class="card">
+        <article class="card" id="about">
           <section class="container">
             <!--Header-->
              <header class="card-header bg-transparent">
