updated each pages card styling

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,10 +35,8 @@
 
 <main class="container">
   <section class="row">
-    <div class="col-9">
-  
       <!--Portfolio Images on a Card-->
-      <article class="card">
+      <article class="card" id="portfolio">
         <section class="container">
         <!--Header-->
         <header class="card-header bg-transparent">
@@ -119,8 +117,7 @@
         
         </section>
       </article>
- 
-    </div>
+
   </section>
 </main>
 
