--- a/contact.html
+++ b/contact.html
@@ -39,13 +39,10 @@
   <!--Header-->
   <!--Changed my container div to main as it is the main part of the webpage. Each row class was then changed from a div to a section within the main container-->
   <main class="container">
-    <section class="row">
-      <div class="col-2">
-      </div>
-      
-      <div class="col-8">
+    <section class="row">    
+    
         <!--Contact Me Form-->
-        <article class="card">
+        <article class="card" id="contact">
           <section class="container">
             <!--Header-->
             <header class="card-header bg-transparent">
@@ -73,16 +70,8 @@
             </form>
           </section> 
         </article>
-      </div>
-    </section>
 
-    <!--Message Under Contact-->
-    <section class="row">
-      <div class="col-12">
-        <h5>I can't wait to hear from you <i class="far fa-kiss-wink-heart"></i></h5>
-      </div>
     </section>
-
   </main>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
