--- a/contact.html
+++ b/contact.html
@@ -55,18 +55,18 @@
             <!--Main Form-->
             <form class="card-body">
                 <section class="form-group">
-                  <label for="exampleFormControlInput1"><i class="far fa-user"></i> Your Name</label>
-                  <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Your Name Here">
+                  <label for="name"><i class="far fa-user"></i> Your Name</label>
+                  <input type="text" class="form-control" id="name" placeholder="Your Name Here">
                 </section>
                 <section class="form-group">
-                  <label for="exampleFormControlInput2"><i class="far fa-envelope"></i> Email Address</label>
-                  <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="name@example.com">
+                  <label for="email"><i class="far fa-envelope"></i> Email Address</label>
+                  <input type="email" class="form-control" id="email" placeholder="name@example.com">
                 </section>
                 <section class="form-group">
-                  <label for="exampleFormControlTextarea1"><i class="far fa-comment-alt"></i> Message</label>
-                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                  <label for="message"><i class="far fa-comment-alt"></i> Message</label>
+                  <textarea class="form-control" id="message" rows="3"></textarea>
                 </section>            
-                <button type="submit" class="btn btn-secondary">Submit</button>
+                <button type="submit" class="btn btn-secondary" id="submitBtn">Submit</button>
             </form>
           </section> 
         </article>
@@ -76,5 +76,6 @@
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+  <script src="./scripts/scripts.js"></script>
 </body>
 </html>
