color scheme updated

--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
 <body>
 
    <!--Navbar-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <span class="navbar-brand mb-0 h1">Jacqueline Ross</span>
+  <nav class="navbar navbar-expand-lg navbar-custom">
+    <span class="navbar-brand mb-0 h1" id="name">Jacqueline Ross</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -66,7 +66,7 @@
                   <label for="message"><i class="far fa-comment-alt"></i> Message</label>
                   <textarea class="form-control" id="message" rows="3"></textarea>
                 </section>            
-                <button type="submit" class="btn btn-secondary" id="submitBtn">Submit</button>
+                <button type="submit" class="btn btn-custom" id="submitBtn">Submit</button>
             </form>
           </section> 
         </article>
