--- a/portfolio.html
+++ b/portfolio.html
@@ -12,8 +12,8 @@
 
 <body>
  <!--Navbar-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <span class="navbar-brand mb-0 h1">Jacqueline Ross</span>
+  <nav class="navbar navbar-expand-lg navbar-custom">
+    <span class="navbar-brand mb-0 h1" id="name">Jacqueline Ross</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -55,8 +55,8 @@
                 <figure class="img-wrapper">
                   <img class="img-responsive" src="./Images/Code Refactor.png" alt="Horiseon Marketing Agency Webpage Preview">
                   <figure class="img-overlay">
-                    <a href="https://ross1jk.github.io/Horiseon-Marketing-Agency-Code-Refactor/" class="btn btn-info btn-md active" role="button" aria-pressed="true">Code Refactor</a> 
-                    <a href="https://github.com/ross1jk/Horiseon-Marketing-Agency-Code-Refactor" class="btn btn-info btn-md active" role="button" aria-pressed="true">Repository</a>
+                    <a href="https://ross1jk.github.io/Horiseon-Marketing-Agency-Code-Refactor/" id="btn" class="btn btn-custom btn-md active" role="button" aria-pressed="true">Code Refactor</a> 
+                    <a href="https://github.com/ross1jk/Horiseon-Marketing-Agency-Code-Refactor" id="btn" class="btn btn-custom btn-md active" role="button" aria-pressed="true">Repository</a>
                   </figure>
                 </figure>
               </div>
@@ -65,18 +65,18 @@
                   <figure class="img-wrapper">
                     <img class="img-responsive" src="./Images/passwordgenerator.png" alt="Coming Soon">
                     <figure class="img-overlay">
-                      <a href="https://ross1jk.github.io/Secure-Password-Generator/" class="btn btn-info btn-md active" role="button" aria-pressed="true">Password Generator</a> 
-                      <a href="https://github.com/ross1jk/Secure-Password-Generator" class="btn btn-info btn-md active" role="button" aria-pressed="true">Repository</a>
+                      <a href="https://ross1jk.github.io/Secure-Password-Generator/" id="btn" class="btn btn-custom btn-md active" role="button" aria-pressed="true">Password Generator</a> 
+                      <a href="https://github.com/ross1jk/Secure-Password-Generator" id="btn" class="btn btn-custom btn-md active" role="button" aria-pressed="true">Repository</a>
                     </figure>
                   </figure>
                 </div>
 
-                <div class="col-md-6 col-sm-12">
+               <div class="col-md-6 col-sm-12">
                   <figure class="img-wrapper">
                     <img class="img-responsive" src="./Images/javascriptquiz.png" alt="Coming Soon">
                     <figure class="img-overlay">
-                      <a href="https://ross1jk.github.io/JavaScript-Fundamentals-Quiz/" class="btn btn-info btn-md active" role="button" aria-pressed="true">JavaScript Quiz</a> 
-                      <a href="https://github.com/ross1jk/JavaScript-Fundamentals-Quiz" class="btn btn-info btn-md active" role="button" aria-pressed="true">Repository</a>
+                      <a href="https://ross1jk.github.io/JavaScript-Fundamentals-Quiz/" id="btn" class="btn btn-custom btn-md active" role="button" aria-pressed="true">JavaScript Quiz</a> 
+                      <a href="https://github.com/ross1jk/JavaScript-Fundamentals-Quiz" id="btn" class="btn btn-custom btn-md active" role="button" aria-pressed="true">Repository</a>
                     </figure>
                   </figure>
                 </div>
@@ -85,8 +85,8 @@
                   <figure class="img-wrapper">
                     <img class="img-responsive" src="./Images/workdayscheduler.png" alt="Coming Soon">
                     <figure class="img-overlay">
-                      <a href="https://ross1jk.github.io/work-day-scheduler/" class="btn btn-info btn-md active" role="button" aria-pressed="true">Work Day Scheduler</a> 
-                      <a href="https://github.com/ross1jk/work-day-scheduler" class="btn btn-info btn-md active" role="button" aria-pressed="true">Repository</a>
+                      <a href="https://ross1jk.github.io/work-day-scheduler/" id="btn" class="btn btn-custom btn-md active" role="button" aria-pressed="true">Work Day Scheduler</a> 
+                      <a href="https://github.com/ross1jk/work-day-scheduler" id="btn" class="btn btn-custom btn-md active" role="button" aria-pressed="true">Repository</a>
                     </figure>
                   </figure>
                 </div>
@@ -95,8 +95,8 @@
                   <figure class="img-wrapper">
                     <img class="img-responsive" src="./Images/weatherdashboard.png" alt="Coming Soon">
                     <figure class="img-overlay">
-                      <a href="https://ross1jk.github.io/weather-dashboard/" class="btn btn-info btn-md active" role="button" aria-pressed="true">Weather Dashboard</a> 
-                      <a href="https://github.com/ross1jk/weather-dashboard" class="btn btn-info btn-md active" role="button" aria-pressed="true">Repository</a>
+                      <a href="https://ross1jk.github.io/weather-dashboard/" id="btn" class="btn btn-custom btn-md active" role="button" aria-pressed="true">Weather Dashboard</a> 
+                      <a href="https://github.com/ross1jk/weather-dashboard" id="btn" class="btn btn-custom btn-md active" role="button" aria-pressed="true">Repository</a>
                     </figure>
                   </figure>
                 </div>
@@ -105,8 +105,8 @@
                   <figure class="img-wrapper">
                     <img class="img-responsive" src="./Images/cycleology.png" alt="Coming Soon">
                     <figure class="img-overlay">
-                      <a href="https://romerodi.github.io/cycle-ology/search-element" class="btn btn-info btn-md active" role="button" aria-pressed="true">Cycle-ology</a> 
-                      <a href="https://github.com/romerodi/cycle-ology" class="btn btn-info btn-md active" role="button" aria-pressed="true">Repository</a>
+                      <a href="https://romerodi.github.io/cycle-ology/search-element" id="btn" class="btn btn-custom btn-md active" role="button" aria-pressed="true">Cycle-ology</a> 
+                      <a href="https://github.com/romerodi/cycle-ology" id="btn" class="btn btn-custom btn-md active" role="button" aria-pressed="true">Repository</a>
                     </figure>
                   </figure>
                 </div>
