footer updated on each card with contact links

--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,9 @@
                   <textarea class="form-control" id="message" rows="3"></textarea>
                 </section>            
                 <button type="submit" class="btn btn-custom" id="submitBtn">Submit</button>
+                <footer class="card-footer bg-transparent" id="footer">
+                  <h6><a href="./Documents/JacquelineRoss-Resume.pdf"><i class="far fa-file"></i>My Resume</a> | <a href="https://github.com/ross1jk"><i class="fab fa-github"></i>GitHub</i></a> | <a href="https://www.linkedin.com/in/jacquelinekross/">Linked<i class="fab fa-linkedin-in"></i></a></h6>
+                </footer>
             </form>
           </section> 
         </article>
