--- a/portfolio.html
+++ b/portfolio.html
@@ -114,7 +114,9 @@
               </section>
             </section>
           </article>
-        
+          <footer class="card-footer bg-transparent" id="footer">
+            <h6><a href="./Documents/JacquelineRoss-Resume.pdf"><i class="far fa-file"></i>My Resume</a> | <a href="https://github.com/ross1jk"><i class="fab fa-github"></i>GitHub</i></a> | <a href="https://www.linkedin.com/in/jacquelinekross/">Linked<i class="fab fa-linkedin-in"></i></a></h6>
+          </footer>
         </section>
       </article>
 
