--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-expand-lg navbar-custom">
     <span class="navbar-brand mb-0 h1" id="name">Jacqueline Ross</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon"><i class="fas fa-bars" style="color:#4682B4; font-size:28px;"></i></span>
     </button>
     <!--Changed div class to nav to specify navigation links-->
     <nav class="collapse navbar-collapse" id="navbarNav">
