fixed conflicting ids

--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
             <form class="card-body">
                 <section class="form-group">
                   <label for="name"><i class="far fa-user"></i> Your Name</label>
-                  <input type="text" class="form-control" id="name" placeholder="Your Name Here">
+                  <input type="text" class="form-control" id="username" placeholder="Your Name Here">
                 </section>
                 <section class="form-group">
                   <label for="email"><i class="far fa-envelope"></i> Email Address</label>
