fixed spelling updated readme

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <img src="./Images/AboutMe.JPG" class="float-left" alt="Jacqueline Ross">
                   </figure> 
                  <!--Information-->
-                  <p>I currently work as the Change Coordinator for Mainframe Services at Ford Motor Company. I leads all aspects of Change Management for the department and deliver essential communications both internally and externally. This communication involves the design of our project websites and the communication that goes out to the customer. These pages get distributed globally and their functionality is essential.</p>                  
+                  <p>I currently work as the Change Coordinator for Mainframe Services at Ford Motor Company. I lead all aspects of Change Management for the department and deliver essential communications both internally and externally. This communication involves the design of our project websites and the communication that goes out to the customer. These pages get distributed globally and their functionality is essential.</p>                  
                   <p> I am currently studying Full Stack Web Development through Michigan State University. Be sure to check out my work in the portfolio tab, and see even more by visiting my GitHub page, where I store all of my recent projects. </p>
                </div>
              </section>
