added eatdaburger application

--- a/portfolio.html
+++ b/portfolio.html
@@ -111,6 +111,17 @@
                   </figure>
                 </div>
 
+                <div class="col-md-6 col-sm-12">
+                  <figure class="img-wrapper">
+                    <img class="img-responsive" src="./Images/eatdaburger.png" alt="Coming Soon">
+                    <figure class="img-overlay">
+                      <a href="https://dry-eyrie-60767.herokuapp.com/" id="btn" class="btn btn-custom btn-md active" role="button" aria-pressed="true">Eat-Da-Burger</a> 
+                      <a href="https://github.com/ross1jk/EatDaBurger" id="btn" class="btn btn-custom btn-md active" role="button" aria-pressed="true">Repository</a>
+                    </figure>
+                  </figure>
+                </div>
+
+
               </section>
             </section>
           </article>
