--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <!--Navbar-->
-  <nav class="navbar navbar-expand-lg navbar-custom">
+  <nav class="navbar navbar-expand-lg sticky-top navbar-custom">
     <span class="navbar-brand mb-0 h1" id="name">Jacqueline Ross</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"><i class="fas fa-bars" style="color:#4682B4; font-size:28px;"></i></span>
