--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 
 <body>
   <!--Navbar-->
-  <nav class="navbar navbar-expand-lg navbar-custom">
+  <nav class="navbar navbar-expand-lg sticky-top navbar-custom">
     <span class="navbar-brand mb-0 h1" id="name">Jacqueline Ross</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
